# recastnavigation

./: .gitignore  CMakeLists.txt  README.md
Detour/Include/: DetourNavMesh.h
NavMeshBuilder/: CMakeLists.txt  build_and_run.bat  navmesh_loader.cpp  standalone_navmesh_builder.cpp
NavMeshBuilder/navmesh_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  NavMeshBuilder.vcxproj  NavMeshBuilder.vcxproj.filters  NavMeshLoader.vcxproj  NavMeshLoader.vcxproj.filters  StandaloneNavMeshBuilder.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
NavMeshBuilder/navmesh_build/NavMeshBuilder.dir/Release/: NavMeshBuilder.exe.recipe
NavMeshBuilder/navmesh_build/NavMeshBuilder.dir/Release/NavMeshBuilder.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
NavMeshBuilder/navmesh_build/NavMeshLoader.dir/Release/: NavMeshLoader.exe.recipe
NavMeshBuilder/navmesh_build/NavMeshLoader.dir/Release/NavMeshLoader.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
NavMeshBuilder/navmesh_build/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
NavMeshBuilder/navmesh_build/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.write.1.tlog
NavMeshBuilder/navmesh_build/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
NavMeshBuilder/navmesh_build/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
NavMeshChecker/: CMakeLists.txt  build_and_run.bat  navmesh_checker.cpp  navmesh_loader.cpp
RecastDemo/Source/: Sample_TileMesh.cpp
